--- a/classcrud/templates/classcrud/classblog_confirm_delete.html
+++ b/classcrud/templates/classcrud/classblog_confirm_delete.html
@@ -1,5 +1,5 @@
 <form method="POST">
     {% csrf_token %}
-    진짜 지울거야? <br><br>
-    <input type="submit" value="어 진짜 지울거야">
+    평가를 삭제하시겠습니까? <br><br>
+    <input type="submit" value="예">
 </form>
