--- a/classcrud/templates/classcrud/classblog_detail.html
+++ b/classcrud/templates/classcrud/classblog_detail.html
@@ -1,5 +1,5 @@
 <h1>본문 자세히 보기 페이지</h1>
 <hr>
-<h2> 제목 : {{object.title}} </h2>
+<h2> 강의명 : {{object.title}} </h2>
 <h4> 날짜 : {{object.created_at}} </h4>
-본문 : {{object.body}}
+평가내용 : {{object.body}}
