--- a/classcrud/templates/classcrud/classblog_form.html
+++ b/classcrud/templates/classcrud/classblog_form.html
@@ -1,5 +1,5 @@
 <form method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value = "추가하기">
+    <input type="submit" value = "등록하기">
 </form>
