--- a/classcrud/templates/classcrud/classblog_list.html
+++ b/classcrud/templates/classcrud/classblog_list.html
@@ -2,11 +2,11 @@
 <html lang="ko">
     <head>
         <meta charset="utf-8">
-        <title>게시판 2</title>
+        <title>강의 평가</title>
     </head>
     <body>
         <a href="http://127.0.0.1:8000/">홈</a> <br>
-        <a href="{% url 'new' %}"> 추가 </a>
+        <a href="{% url 'new' %}"> 평가하기 </a>
         <br>
 
         {%for blog in object_list%}
