--- a/classcrud/templates/classcrud/classblog_detail.html
+++ b/classcrud/templates/classcrud/classblog_detail.html
@@ -1,5 +1,6 @@
-<h1>본문 자세히 보기 페이지</h1>
+<h1>평가 상세 정보</h1>
 <hr>
 <h2> 강의명 : {{object.title}} </h2>
-<h4> 날짜 : {{object.created_at}} </h4>
+<h2> 교수명 : {{object.prof}} </h2>
+<h4> 최신 등록 날짜 : {{object.updated_at}} </h4>
 평가내용 : {{object.body}}
