--- a/classcrud/templates/classcrud/classblog_list.html
+++ b/classcrud/templates/classcrud/classblog_list.html
@@ -11,7 +11,8 @@
 
         {%for blog in object_list%}
             <h2>{{blog.title}}</h2>
-            <h5>{{blog.created_at}}</h5>
+            <h2>{{blog.prof}}</h2>
+            <h5>{{blog.updated_at}}</h5>
             <p>{{blog.body}}</p>
             <a href="{% url 'detail' blog.id %}"> 자세히보기 </a> <br>
             <a href="{% url 'change' blog.id %}"> 수정 </a> <br>
