--- a/classcrud/templates/classcrud/classblog_home.html
+++ b/classcrud/templates/classcrud/classblog_home.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <h1>영환바꿈 고려대학교 세종캠퍼스 강의평가 사이트</h1> <br>
+        <h1>고려대학교 세종캠퍼스 강의평가 사이트</h1> <br>
         <h1>Korea University Sejong campus course Evaluation site</h1>        
         <a href="{% url 'list' %}">강의 평가</a><br>
     </body>
