--- a/classcrud/templates/classcrud/classblog_detail.html
+++ b/classcrud/templates/classcrud/classblog_detail.html
@@ -1,6 +1,6 @@
 <h1>평가 상세 정보</h1>
 <hr>
-<h2> 강의명 : {{object.title}} </h2>
-<h2> 교수명 : {{object.prof}} </h2>
+<h2> 강의명 : {{object.강의명}} </h2>
+<h2> 교수명 : {{object.교수명}} </h2>
 <h4> 최신 등록 날짜 : {{object.updated_at}} </h4>
-평가내용 : {{object.body}}
+평가내용 : {{object.평가내용}}
