--- a/classcrud/templates/classcrud/classblog_home.html
+++ b/classcrud/templates/classcrud/classblog_home.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
+    {% if error %}
+    {{ error }}
+    <br>
+    <br>
+    {% endif %}
     <head>
         <meta charset="utf-8">
         <title>KUSE</title>
@@ -7,7 +12,21 @@
     </head>
     <body>
         <h1>고려대학교 세종캠퍼스 강의평가 사이트</h1> <br>
-        <h1>Korea University Sejong campus course Evaluation site</h1>        
+        <h1>Korea University Sejong campus course Evaluation site</h1>
+        <form method="POST" action="{% url 'welcome' %}">
+            {% csrf_token %}
+            Username:
+            <br>
+            <input name="username" type="text" value="">
+            <br>
+            Password:
+            <br>
+            <input name="password" type="password" value="">
+            <br>
+            <br>
+            <input class="btn btn-primary" type="submit" value="Login">
+            <a href="{% url 'signup' %}">회원가입</a>
+        </form>        
         <a href="{% url 'list' %}">강의 평가</a><br>
     </body>
 </html>
